# assembler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  assembler  assembler.c  assembler.h  entryAndExtern.c  entryAndExtern.h  example.txt  example.txt.am  externVars.h  extern_vars.h  firstIteration.c  firstIteration.h  firstPass  firstPass.c  firstPass.h  globals.h  macroList.c  macroList.h  macro_list.c  macro_list.h  main  main.c  makefile  operation.c  operation.h  operationTable.c  operationTable.h  preprocessor.c  preprocessor.h  secondPass.c  secondPass.h  secondPassTest.c  structs.h  symbolList.c  symbolList.h  test.ob  test1  (+16 more)
output/: test1.am
testers/errors/: test3.am  test4.am  test4.as
testers/works/: test1.ob  test2.am  test2.ent  test2.ext  test2.ob
utillities/: errors.c  errors.h  macro_list.c  macro_list.h  macros.h  parse.c  parse.h
